--- a/.drone.yml
+++ b/.drone.yml
@@ -51,7 +51,7 @@ steps:
   image: docker:git
   commands:
   - git clone https://github.com/dungtri/cups.git .
-  - git master
+  - git checkout master
 
 - name: build
   image: plugins/docker
@@ -89,7 +89,7 @@ steps:
   image: docker:git
   commands:
   - git clone https://github.com/dungtri/cups.git .
-  - git master
+  - git checkout master
 
 - name: build
   image: plugins/docker
